main.tf
data "aws_vpc" "main" {
  id = var.vpc_id
}

resource "aws_instance" "my_server" {
  ami                    = var.ami_id
  instance_type          = var.instance_type_size
  key_name               = "${aws_key_pair.deployer.key_name}"
  vpc_security_group_ids = [aws_security_group.sg_my_server.id]
  user_data = data.template_file.user_data.rendered
  provisioner "local-exec" {
    command = "echo ${self.private_ip} >> ${var.remote_output_file}"
  }

  connection {
    type     = "ssh"
    user     = var.ec2_user
    host     = "${self.public_ip}"
    private_key = "${file(var.private_key_location)}"
  }

  tags = {
    Name = "MyServer-${var.project_name}"
  }
}


resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = var.public_key
}

data "template_file" "user_data" {
    template = "${file(var.userdata_file)}"
}

resource "aws_security_group" "sg_my_server" {
  name        = "sg_my_server"
  description = "My Server Security Group"
  vpc_id      = data.aws_vpc.main.id

  ingress = [
    {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = []
    prefix_list_ids  = null
    security_groups  = null
    self = false
    },
    {
      description = "SSH"
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["67.165.127.123/32"]
      ipv6_cidr_blocks = []
      prefix_list_ids  = null
      security_groups  = null
      self = false
    }
  ]

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
